# chatbot-agent

./: .dockerignore  .env.example  .gitignore  .proto-deps.json  Dockerfile  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: ci.yml  proto-sync-check.yml  pull-proto.yml  sync-chat-proto.yml
eval/: README.md  __init__.py  answer_quality.py  clients.py  e2e_runner.py  fixtures.py  live_golden_eval.py  metrics.py  multi_hop.py  report.py  retrieval_runner.py  run_eval.py  thresholds.py
eval/scripts/: _golden_common.py  build_golden_v2.py  build_golden_v3.py  sample_corpus_v2.py  sample_corpus_v3.py
proto/chat/v1/: chat.proto
src/agent/: config.py  grpc_server.py  main.py  metrics.py
src/agent/api/: chart_builder.py  chat_pipeline.py  routes_chat.py  routes_health.py  schemas.py  source_mapper.py  sse_events.py
src/agent/data/: mongo.py  opensearch.py  redis.py
src/agent/graph/: builder.py  nodes.py  state.py
src/agent/guardrails/: guardrails.py
src/agent/llm/: groq_client.py  prompts.py  reference.py
src/agent/rag/: embeddings.py  ip_retriever.py  query_parser.py  retriever.py
src/agent/repositories/: faculty_repo.py  ip_repo.py  protocols.py  research_repo.py  taxonomy_repo.py
src/tests/: test_agent_graph.py
tests/: conftest.py  test_agent_graph.py  test_chart_builder.py  test_chat_endpoint.py  test_eval_metrics.py  test_eval_offline.py  test_fast_path.py  test_get_ip_stats.py  test_guardrails.py  test_new_tools.py  test_retrieval_quality.py  test_security.py  test_structured_routing.py  test_tools.py  test_top_faculty.py
(+52 files in other folders)
