[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatbot-agent"
version = "1.0.0"
description = "Agentic RAG chatbot for IIT Delhi research portal — LangGraph + Llama 3.3 70B via Groq"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "langgraph>=0.4.0",
    "langchain>=0.3.0",
    "langchain-openai>=0.3.0",
    "langchain-core>=0.3.0",
    "motor>=3.6.0",
    "opensearch-py>=2.7.0",
    "redis>=5.0.0",
    "aiohttp>=3.9.0",
    "httpx>=0.27.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "python-dotenv>=1.0.0",
    "sse-starlette>=2.1.0",
    "grpcio>=1.66.0",
    "protobuf>=4.25.0",
    "iitd-tech-ambit-proto-stubs @ git+https://github.com/IITD-Tech-Ambit/proto-registry.git@release/v0.1.0#subdirectory=gen-python",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "respx>=0.21.0",
    "mongomock-motor>=0.0.34",
    "httpx>=0.27.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]

[tool.setuptools.packages.find]
where = ["src"]
